# pegasus_gazebo

./: CMakeLists.txt  LICENSE  package.xml
launch/vehicles/: iris.launch.py  iris_depth.launch.py  iris_fpv.launch.py
launch/worlds/: empty.launch.py  empty_world.launch.py  obstacles.launch.py  racetrack.launch.py  taguspark.launch.py  taguspark_world.launch.py
models/aruco_default/: model.config  model.sdf
models/cardboard_box/: model.sdf
models/pegasus_fpv_cam/: model.config  pegasus_fpv_cam.sdf  pegasus_fpv_cam.sdf.jinja
models/pegasus_iris/: model.config  pegasus_iris.sdf.jinja
models/pegasus_iris_depth_camera/: model.config
models/pegasus_iris_fpv/: model.config  pegasus_iris_fpv.sdf  pegasus_iris_fpv.sdf.jinja
models/racetrack/: model.config  model.sdf
models/taguspark_arena/: model.config  taguspark_arena.sdf
pegasus_gazebo/: CMakeLists.txt  package.xml
scripts/: jinja_gen.py
simulation_bringup/: CMakeLists.txt  package.xml  setup.py
simulation_bringup/launch/: internet.launch.py  iris.launch.py  snapdragon.launch.py  world.launch.py
simulation_models/: CMakeLists.txt  package.xml  setup.cfg  setup.py
simulation_models/models/pegasus_iris/: model.config  pegasus_iris.sdf.jinja
simulation_models/models/pegasus_iris_depth_camera/: pegasus_iris_depth_camera.sdf
simulation_models/models/pegasus_iris_fpv/: model.config  pegasus_iris_fpv.sdf.jinja
worlds/: empty.world  empty2.world  racetrack.world  taguspark.world  taguspark_obstacles.world
