<?xml version="1.0"?>
<package format="2">
  <name>pegasus_gazebo</name>
  <version>0.1.0</version>
  <description>Meta package for simulating drones uisng PX4 and gazebo</description>
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>px4</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
